multiple images auction,item

--- a/AuctionAce.Api/Views/Auction/AddAuction.cshtml
+++ b/AuctionAce.Api/Views/Auction/AddAuction.cshtml
@@ -24,7 +24,7 @@
                 </div>
                 <div class="form-group">
                     <label for="image">Auction Photo</label>
-            <input type="file" class="form-control-file" id="image" name="image">
+            <input type="file" class="form-control-file" id="image" name="image" multiple>
                 </div>
 
                 <!-- Tabela przedmiotów -->
@@ -81,7 +81,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="itemImage">Item Photo</label>
-                                <input type="file" class="form-control-file" id="itemImage" name="itemImage" >
+                                <input type="file" class="form-control-file" id="itemImage" name="itemImage" multiple >
                             </div>
                             <div class="form-group">
                                 <label for="startPrice">Start Price</label>
