--- a/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
+++ b/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
@@ -24,6 +24,7 @@
                         <th scope="col">Category</th>
                         <th scope="col">Start Price</th>
                         <th scope="col">Buy Now Price</th>
+                        <th scope="col">Condition</th>
                         <th scope="col">Photo</th>
                     </tr>
                 </thead>
@@ -33,14 +34,15 @@
                         <tr>
                             <td>@i.Name</td>
                             <td>@i.Description</td>
+                            <td>@i.Category</td>
                             <td>@i.StartingPrice</td>
                             <td>@i.BuyNowPrice</td>
-                            @* <td>
-                                @if (!string.IsNullOrEmpty(i.ImagePath))
-                                {
-                                    <img src="@i.ImagePath" alt="@i.Name" class="img-thumbnail" style="max-width: 100px;">
-                                }
-                            </td> *@
+                            <td>@i.NewUsed</td>
+                            <td>
+                                <button type = "button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#photoGalleryModal" data-item-id="@i.Id">
+                                <i class="fas fa-images"></i>
+                                </button>
+                            </td>
                         </tr>
                     }
                 </tbody>
@@ -52,3 +54,35 @@
         <p>No auctions available.</p>
     }
 </div>
+
+
+<!-- Modal for Photo Gallery -->
+<div class="modal fade" id="photoGalleryModal" tabindex="-1" role="dialog" aria-labelledby="photoGalleryModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="photoGalleryModalLabel">Photo Gallery</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div id="photoCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <!-- Carousel items will be inserted here -->
+                    </div>
+                    <a class="carousel-control-prev" href="#photoCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#photoCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
