--- a/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
+++ b/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
@@ -39,11 +39,50 @@
                             <td>@i.BuyNowPrice</td>
                             <td>@i.NewUsed</td>
                             <td>
-                                <button type = "button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#photoGalleryModal" data-item-id="@i.Id">
-                                <i class="fas fa-images"></i>
+                                <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#carouselModal-@i.Id" data-item-id="@i.Id">
+                                    <i class="fas fa-images"></i>
                                 </button>
                             </td>
                         </tr>
+
+                        <!-- Modal z carousel -->
+                        <div class="modal fade" id="carouselModal-@i.Id" tabindex="-1" aria-labelledby="carouselModalLabel-@i.Id" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-body">
+                                        <div id="carousel-@i.Id" class="carousel slide" data-bs-ride="carousel">
+                                            <div class="carousel-inner">
+                                                @if (Model.SingleItemImages.ItemImages.ContainsKey(i.Id))
+                                                {
+                                                    var itemImages = Model.SingleItemImages.ItemImages[i.Id];
+                                                    for (int j = 0; j < itemImages.Count; j++)
+                                                    {
+                                                        var image = itemImages[j];
+                                                        <div class="carousel-item @(j == 0 ? "active" : "")">
+                                                            <img class="d-block w-100" src="data:image/png;base64,@image.ItemImageBase64" alt="Image @j">
+                                                        </div>
+                                                    }
+                                                }
+                                                else
+                                                {
+                                                    <div class="carousel-item active">
+                                                        <img class="d-block w-100" src="https://via.placeholder.com/800x400" alt="No image available">
+                                                    </div>
+                                                }
+                                            </div>
+                                            <a class="carousel-control-prev" href="#carousel-@i.Id" role="button" data-bs-slide="prev">
+                                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Previous</span>
+                                            </a>
+                                            <a class="carousel-control-next" href="#carousel-@i.Id" role="button" data-bs-slide="next">
+                                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Next</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     }
                 </tbody>
             </table>
@@ -54,35 +93,3 @@
         <p>No auctions available.</p>
     }
 </div>
-
-
-<!-- Modal for Photo Gallery -->
-<div class="modal fade" id="photoGalleryModal" tabindex="-1" role="dialog" aria-labelledby="photoGalleryModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="photoGalleryModalLabel">Photo Gallery</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div id="photoCarousel" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <!-- Carousel items will be inserted here -->
-                    </div>
-                    <a class="carousel-control-prev" href="#photoCarousel" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#photoCarousel" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
